# shrouded

./: COPYRIGHT  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: migration.md
src/: alloc.rs  builder.rs  error.rs  lib.rs  policy.rs  serde.rs  traits.rs
src/sys/: fallback.rs  mod.rs  unix.rs  windows.rs
src/types/: array.rs  boxed.rs  bytes.rs  hasher.rs  mod.rs  string.rs
