[package]
name = "shroud"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "MIT"
description = "Secure memory management with mlock, guard pages, and automatic zeroization"

[dependencies]
zeroize.workspace = true
thiserror.workspace = true
subtle = "2.5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_Memory", "Win32_Foundation", "Win32_System_SystemInformation"] }

[dependencies.serde]
version = "1.0"
optional = true
default-features = false
features = ["derive"]

[features]
default = ["mlock", "guard-pages"]
mlock = []
guard-pages = []
serde = ["dep:serde"]
digest = ["dep:digest"]
sha1 = ["digest", "dep:sha1"]
sha2 = ["digest", "dep:sha2"]

[dependencies.digest]
version = "0.10"
optional = true

[dependencies.sha1]
version = "0.10"
optional = true

[dependencies.sha2]
version = "0.10"
optional = true

[dev-dependencies]
tempfile = "3"
serde_json = "1.0"
hex = "0.4"
proptest = "1.4"
